--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "expo start",
     "android": "expo run:android",
     "ios": "expo run:ios",
-    "web": "expo start --web"
+    "test": "jest"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "1.21.0",
@@ -22,9 +22,20 @@
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@config-plugins/detox": "^7.0.0",
+    "@testing-library/react-native": "^12.4.3",
+    "@types/jest": "^29.5.12",
     "@types/react": "~18.2.45",
+    "babel-plugin-module-resolver": "^5.0.0",
+    "jest": "^29.3.1",
+    "jest-expo": "~50.0.2",
     "reactotron-react-native": "^5.1.0",
     "typescript": "^5.1.3"
   },
-  "private": true
+  "private": true,
+  "jest": {
+    "preset": "jest-expo",
+    "transformIgnorePatterns": [
+      "node_modules/(?!((jest-)?react-native|@react-native(-community)?)|expo(nent)?|@expo(nent)?/.*|@expo-google-fonts/.*|react-navigation|@react-navigation/.*|@unimodules/.*|unimodules|sentry-expo|native-base|react-native-svg)"
+    ]
+  }
 }
