--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "start": "expo start",
     "android": "expo run:android",
     "ios": "expo run:ios",
-    "test": "jest"
+    "test": "yarn test:unit && yarn test:e2e",
+    "test:unit": "jest --testPathIgnorePatterns e2e",
+    "test:e2e": "detox test --configuration ios.sim.debug",
+    "test:e2e:config": "npx expo prebuild && detox build --configuration ios.sim.debug"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "1.21.0",
@@ -24,11 +27,14 @@
     "@config-plugins/detox": "^7.0.0",
     "@testing-library/react-native": "^12.4.3",
     "@types/jest": "^29.5.12",
+    "@types/node": "^20.11.17",
     "@types/react": "~18.2.45",
     "babel-plugin-module-resolver": "^5.0.0",
+    "detox": "^20.18.1",
     "jest": "^29.3.1",
     "jest-expo": "~50.0.2",
     "reactotron-react-native": "^5.1.0",
+    "ts-jest": "^29.1.2",
     "typescript": "^5.1.3"
   },
   "private": true,
